--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="game-container">
         <canvas id="gameCanvas"></canvas>
         <div class="controls">
-            <p>使用方向键移动，空格键跳跃</p>
+            <p>使用鼠标移动控制角色，点击鼠标左键跳跃</p>
             <p>得分: <span id="score">0</span></p>
         </div>
     </div>
